set up about me page tuned rainbow background improved home page and header buttons fixed header button bugs with visible content switching

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -9,14 +9,14 @@
 
 html { /*rainbow css*/
     background-image:
-            linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet, red);
+            linear-gradient(to left, red, #ff8100,yellow, #2cea2c, #59ffa1, #2780ff, #a728ff, #e728fd, #ff4ca4, #bebebe, #62d1ff, #7a3702, #800000, #a40000, #ff0000);
     background-size: 600%;
-    animation: rainbow-animation 66.8s linear infinite;
+    animation: rainbow-animation 39.8s linear infinite;
 }
 
 @keyframes rainbow-animation {
     to {
-        background-position: 1000vh;
+        background-position: 1350vh;
     }
 }
 
@@ -35,8 +35,7 @@ body{ color: white; }
 header {
     width: 100%;
     height: 100%;
-    padding-top: 1.5%;
-
+    padding-top: .7%;
     overflow: auto;
 }
 
@@ -51,6 +50,8 @@ header > a, header > button {
 }
 button.section_buttons { background:none; border:none; }
 
+/* body below */
+/*general body styling */
 
 .sections { /*home and about sections at least*/
     float: left;
@@ -58,26 +59,91 @@ button.section_buttons { background:none; border:none; }
     padding-left: 15%;
 }
 
-.section_title {
+.section_title { /*home and about sections at least*/
     font-size: 72px;
     padding-top: 9%;
-    margin-block-start: 0;
+    margin-right: 0;
+    width: max-content;
 }
 
-h1 {
+h1 { /*home and about sections at least*/
     margin-bottom: 0;
-}
-
-.section_subtitle {
-
+    margin-right: 0;
+    width: fit-content;
 }
 
 ul {
-    font-size: 24px;
     list-style-type: none;
+}
+
+/* home body styling */
+
+div#home_subtitle > ul {
+    font-size: 24px;
     padding-left: .5%;
     margin: 0;
 }
-li {
-   margin-bottom: 12px;
+div#home_subtitle > ul > li {
+    margin-bottom: 12px;
+}
+
+/* about body styling */
+
+#about_title {
+    /*display: flex;*/
+    float: left;
+}
+
+#about_sidetext {
+    /*display: flex;*/
+    float: left;
+    width: max-content;
+    height: fit-content;
+    margin-top: 15.7%; /* distance from header */
+    margin-left: 17%; /* distance from title */
+    font-size: 15px;
+}
+
+div#about_sidetext > ul > li {
+    margin-bottom: 5px;
+}
+
+#about_sidetext_header {
+    margin-bottom: 1.5%;
+}
+#about_sidetext_items {
+    margin-top: 1.5%;
+}
+
+div#about_subtitle > p {
+    width: 85%;
+}
+
+hr {
+    /*padding-left: 40px;*/
+    display: block;
+    margin-top: 0.5%;
+    margin-bottom: 0.5%;
+    margin-left: 40px;
+    margin-right: 0;
+    border-style: double;
+    border-width: 1px;
+}
+
+#about_subtitle {
+    height: min-content;
+    display: block;
+    margin-top: 1%;
+    float: left;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    /*padding-bottom:;*/
+    width: 100%;
+    /*background-color: red;*/
+    /*color: white;*/
+    text-align: center;
 }
